# qgis-stac-plugin

./:  .gitignore   .gitignore  404.html  CHANGELOG.md  README.md  admin.py  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  run-tests.sh  sitemap.xml  test_suite.py
.github/workflow/: ci.yml  release.yml
.github/workflows/: build-docs.yml  build_docs.yml  ci.yml  release.yml
about/: index.html
changelog/: index.html
development/: index.html
docs/: about.md  changelog.md  development.md  index.md  installation.md  tutorial.md  user-guide.md
docs/plugin/: changelog.txt
installation/: index.html
plugin/: changelog.txt
repository/: plugins.xml
resources/: resources.qrc
scripts/docker/: qgis-stac-test-pre-scripts.sh  qgis-testing-entrypoint.sh
search/: search_index.json
src/qgis_stac/: __init__.py  conf.py  main.py  utils.py
src/qgis_stac/api/: base.py  client.py  models.py  network.py
src/qgis_stac/definitions/: catalog.py  constants.py
src/qgis_stac/gui/: asset_widget.py  assets_dialog.py  collection_dialog.py  connection_dialog.py  json_highlighter.py  main.py  qgis_stac_widget.py  queryable_property.py  result_item_delegate.py  result_item_model.py  result_item_widget.py
src/qgis_stac/jobs/: token_manager.py
src/qgis_stac/lib/planetary_computer/: __init__.py  sas.py  settings.py  utils.py  version.py
src/qgis_stac/lib/planetary_computer/scripts/: cli.py
src/qgis_stac/lib/pystac_client/: item_search.py  stac_api_io.py
src/qgis_stac/ui/: asset_widget.ui  collection_dialog.ui  connection_dialog.ui  item_assets_widget.ui  qgis_stac_main.ui  qgis_stac_widget.ui  queryable_property.ui  result_item_widget.ui
stylesheets/: extra.css
test/: qgis_interface.py  test_init.py  test_qgis_environment.py  test_settings_manager.py  test_stac_api.py  test_stac_api_client.py  test_stac_api_client_auth.py  test_stac_api_client_functions.py
test/mock/: mock_http_server.py  stac_api_auth_server_app.py  stac_api_server.py  stac_api_server_app.py
test/mock/data/: catalog.json  collection.json  collections.json  conformance.json  first_item.json  fourth_item.json  search.json  search_sorted.json  second_item.json  third_item.json
tutorial/: index.html
user-guide/: index.html
